--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,25 @@
     <header id="page-header">
       <div class="container">
         <div class="row">
-          <div class="nine columns">
+          <div class="eight columns">
             <%= link_to root_path do %>
               <%= image_tag 'minicon_logo_56.png', id: 'minicon-logo' %>
             <% end %>
           </div>
-          <div id="header-links" class="three columns">
+          <div id="header-links" class="four columns">
+            <div class="header-link">
+              <%= link_to root_path do %>
+                <i class="fas fa-home fa-2x header-link-icon"></i>
+                <span class="header-link-text">Home</span>
+              <% end %>
+            </div>
             <% if user_signed_in? %>
+              <div class="header-link">
+                <%= link_to purchases_path do %>
+                  <i class="fas fa-history fa-2x header-link-icon"></i>
+                  <span class="header-link-text">Purchases</span>
+                <% end %>
+              </div>
               <div class="header-link">
                 <%= link_to edit_user_registration_path do %>
                   <i class="fas fa-user fa-2x header-link-icon"></i>
