Change the color of the icons in the header

--- a/app/assets/stylesheets/consumer/main.css
+++ b/app/assets/stylesheets/consumer/main.css
@@ -89,7 +89,7 @@ card > h4:not([class]):first-child, card > h4[xx]:first-child {
 }
 
 .header-link a {
-  color: #000000;
+  color: #53758B;
   text-decoration: none;
 }
 
