Fix sidebar categories markup

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,11 +21,9 @@
     <card class="categories-card">
       <h4>Categories</h4>
       <ul>
-        <li>
-          <a>KONKATSU</a>
-          <a>KOIKATSU</a>
-          <a>GOURMET</a>
-        </li>
+        <li><a>KONKATSU</a></li>
+        <li><a>KOIKATSU</a></li>  
+        <li><a>GOURMET</a></li>
       </ul>
     </card>
   </sidebar>
