Add search field to the sidebar

--- a/app/assets/stylesheets/consumer/events.scss
+++ b/app/assets/stylesheets/consumer/events.scss
@@ -31,3 +31,12 @@
 .ticket-price {
   font-size: 20px;
 }
+
+.search-card h4 {
+  background-color: #C5E2E8;
+}
+
+.search-card input {
+  margin-top: 2rem;
+  height: 36px;
+}
