--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,4 +27,11 @@
       </ul>
     </card>
   </sidebar>
+  <sidebar class="four columns categories-sb">
+    <card class="search-card">
+      <h4>Search</h4>
+      <input class="u-full-width">
+      <a class='button button-primary u-full-width'>Search</a>
+    </card>
+  </sidebar>
 </div>
