Add input type to make the style apply correctly

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,7 +30,7 @@
   <sidebar class="four columns categories-sb">
     <card class="search-card">
       <h4>Search</h4>
-      <input class="u-full-width">
+      <input class="u-full-width" type="text">
       <a class='button button-primary u-full-width'>Search</a>
     </card>
   </sidebar>
