--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
     <header id="page-header">
       <div class="container">
         <div class="row">
-          <div class="eight columns">
+          <div class="four columns">
             <%= link_to root_path do %>
               <%= image_tag 'minicon_logo_56.png', id: 'minicon-logo' %>
             <% end %>
           </div>
-          <div id="header-links" class="four columns">
+          <div id="header-links" class="eight columns">
             <div class="header-link">
               <%= link_to root_path do %>
                 <i class="fas fa-home fa-2x header-link-icon"></i>
