--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,6 +1,15 @@
+<% if @purchase.errors.any? %>
+  <div id="error-explanation">
+    <ul>
+    <% @purchase.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <h3>Purchase Details</h3>
 <p>Please review the details of your purchase before clicking the confirmation button.</p>
-<%= form_with model: @purchase, url: event_purchases_path(@event) do |form| %>
+<%= form_with(model: @purchase, url: event_purchases_path(@event), local: true) do |form| %>
   <%= form.hidden_field(:event_id, value: @event.id) %>
   <%= form.hidden_field(:ticket_quantity, value: 1) %>
   <%= form.hidden_field(:total_price, value: @event.ticket_price) %>
